2022-05-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* man/SabrSwaption.Rd: Move evaluation date of example by a day

2022-03-15  Kai Lin  <klin441@gmail.com>

	* src/utils.cpp (getDayCounter):  change deprecated Actual365NoLeap()
	to Actual365Fixed(Actual365Fixed::NoLeap)
	* man/Enum.Rd: associated documentation change
	* man/BondUtilities.Rd: remove mentions of daycounter deprecation,
	remove mentions of compiler directives RQUANTLIB_USE_ACTUAL365NOLEAP
	and RQUANTLIB_USE_ACTUALACTUAL

2021-11-30  Kai Lin  <klin441@gmail.com>

	* man/Enum.Rd: Update and extend documentation for DayCounter

2022-01-19  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.15
	* configure.ac: Idem
	* configure: Idem

	* R/zzz.R: In interactice mode, display versions of RQuantLib at
	startup

2022-01-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: Updated for Quantlib 1.25

2021-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Remove unused continuous integration artifact and badge

2021-12-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp (getDayCounter): Use Rcpp::stop on error

2021-11-30  Kai Lin  <klin441@gmail.com>

	* src/utils.cpp (getDayCounter): Additional day counters

2021-11-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp (getDayCounter): Correct Thirty360() use

2021-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp (getBusinessDayList): Condition businessDayList
	use on QuantLib 1.18 or newer

2021-11-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor release

	* src/calendars.cpp: Add getBusinessDayList
	* R/calendars.R: Add businessDayList
	* NAMESPACE: Export both
	* man/Calendars.Rd: Documentation

2021-11-02  Dirk Eddelbuettel  <edd@debian.org>

	* R/calendars.R: Add calendars vector
	* man/Calendars.Rd: Add documentation

2021-11-01  Dirk Eddelbuettel  <edd@debian.org>
